force-app/main/default/objects/Rooms__c/Rooms__c.object-meta.xml
<CustomObject>
    <label>Room</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>RoomId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>