force-app/main/default/objects/Rooms__c/fields/Available_For_Booking__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Booking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available For Booking</label>
    <type>Checkbox</type>
</CustomField>