force-app/main/default/objects/Rooms__c/fields/Dicount__c.field-meta.xml
<CustomField>
    <fullName>Dicount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>