force-app/main/default/objects/Rooms__c/fields/Price_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Day__c</fullName>
    <label>Price Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>